# yz

./: .gitignore  pyproject.toml
sample/ollama/: 10_web_service.py  11_web_service_with_upload.py  12_webservice_agent_upload.py  1_basic_ollama.py  2_rag_ollama.py  3_rag.py  4_pinecone.py  5_soru_cevap.py  6_excel_rag.py  7_excel_toplu_json_response.py  8_excel_concurrent_json_response.py  9_excel_metadata_relevant_documents.py
sample/ollama/db/: chroma.sqlite3
sample/ollama/db/excel/: chroma.sqlite3
sample/ollama/excel/: magaza_bilgileri.xlsx  magaza_bilgileri_formu_2_metadata.xlsx
